adding html to quiz

--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Quiz</title>
+  <title>JavaScript Quiz</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+
 </head>
 
-
 <body>
+  <!-- heading info -->
+  <div class="time-scores">
+    <p>View High Scores</p>
+    <p>Time: </p>
+  </div>
+
+  <!-- Start Quiz Section -->
+    <h1 class="question">Coding Quiz Challenge</h1>
+    <p class="coding-quiz-text">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score and time by ten seconds!</p>
+    <button>Start Quiz</button>
   
+
+  <!-- Quiz Section -->
+
+  Q1. Commonly Used data types DO NOT include: 
+  
+
+
+<script src="./script.js"></script>
 </body>
 
 </html>
