finished first page of HTML, now adding questions

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <!-- heading info -->
   <div class="time-scores">
-    <p>View High Scores</p>
-    <p>Time: </p>
+    <p id="high-scores">View High Scores</p>
+    <p>Time: 0 </p>
   </div>
 
   <!-- Start Quiz Section -->
     <h1 class="question">Coding Quiz Challenge</h1>
-    <p class="coding-quiz-text">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score and time by ten seconds!</p>
-    <button>Start Quiz</button>
+    <p class="coding-quiz-text">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
+    <button id="start-btn">Start Quiz</button>
   
 
   <!-- Quiz Section -->
