adding questions to html and css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- heading info -->
   <div class="time-scores">
     <p id="high-scores">View High Scores</p>
-    <p>Time: 0 </p>
+    <p>Time: <span id="timer">75</span>s </p>
   </div>
 
   <!-- Start Quiz Section -->
@@ -24,9 +24,15 @@
   
 
   <!-- Quiz Section -->
-
-  Q1. Commonly Used data types DO NOT include: 
-  
+<div id="quiz-container">
+  <p id="question-text"> Commonly Used data types DO NOT include: </p>
+  <ul id="choices">
+   <li>1. strings</li>
+   <li>2. booleans</li>
+   <li>3. alerts</li>
+   <li>4. numbers</li>
+  </ul>
+</div>
 
 
 <script src="./script.js"></script>
