--- a/index.html
+++ b/index.html
@@ -24,14 +24,70 @@
   
 
   <!-- Quiz Section -->
-<div id="quiz-container">
-  <p id="question-text"> Commonly Used data types DO NOT include: </p>
+<div id="question-container">
+  <!-- question 1 -->
+  <h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
   <ul id="choices">
    <li>1. strings</li>
    <li>2. booleans</li>
    <li>3. alerts</li>
    <li>4. numbers</li>
   </ul>
+</div>
+
+<!-- question 2 -->
+<div id="question-container">
+<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<ul id="choices">
+ <li>1. strings</li>
+ <li>2. booleans</li>
+ <li>3. alerts</li>
+ <li>4. numbers</li>
+</ul>
+</div>
+
+<!-- question 3 -->
+<div id="question-container">
+<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<ul id="choices">
+ <li>1. strings</li>
+ <li>2. booleans</li>
+ <li>3. alerts</li>
+ <li>4. numbers</li>
+</ul>
+</div>
+
+<!-- question 4 -->
+<div id="question-container">
+<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<ul id="choices">
+ <li>1. strings</li>
+ <li>2. booleans</li>
+ <li>3. alerts</li>
+ <li>4. numbers</li>
+</ul>
+</div>
+
+<!-- question 5 -->
+<div id="question-container">
+<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<ul id="choices">
+ <li>1. strings</li>
+ <li>2. booleans</li>
+ <li>3. alerts</li>
+ <li>4. numbers</li>
+</ul>
+</div>
+
+<!-- question 6 -->
+<div id="question-container">
+<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<ul id="choices">
+ <li>1. strings</li>
+ <li>2. booleans</li>
+ <li>3. alerts</li>
+ <li>4. numbers</li>
+</ul>
 </div>
 
 
