--- a/index.html
+++ b/index.html
@@ -30,63 +30,63 @@
   <ul id="choices">
    <li>1. strings</li>
    <li>2. booleans</li>
-   <li>3. alerts</li>
+   <li id="correct1">3. alerts</li>
    <li>4. numbers</li>
   </ul>
 </div>
 
 <!-- question 2 -->
 <div id="question-container">
-<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<h2 id="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
 <ul id="choices">
- <li>1. strings</li>
- <li>2. booleans</li>
- <li>3. alerts</li>
- <li>4. numbers</li>
+ <li>1. quotes</li>
+ <li>2. curly brackets</li>
+ <li id="correct2">3. parenthesis</li>
+ <li>4. square brackets</li>
 </ul>
 </div>
 
 <!-- question 3 -->
 <div id="question-container">
-<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<h2 id="question-text"> Arrays in JavaScript can be used to store __________. </h2>
 <ul id="choices">
- <li>1. strings</li>
- <li>2. booleans</li>
- <li>3. alerts</li>
- <li>4. numbers</li>
+ <li>1. numbers and strings</li>
+ <li>2. other arrays</li>
+ <li>3. booleans</li>
+ <li id="correct3">4. all the above</li>
 </ul>
 </div>
 
 <!-- question 4 -->
 <div id="question-container">
-<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<h2 id="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
 <ul id="choices">
- <li>1. strings</li>
- <li>2. booleans</li>
- <li>3. alerts</li>
- <li>4. numbers</li>
+ <li>1. commas</li>
+ <li>2. curly brackets</li>
+ <li id="correct4">3. quotes</li>
+ <li>4. parenthesis</li>
 </ul>
 </div>
 
 <!-- question 5 -->
 <div id="question-container">
-<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<h2 id="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
 <ul id="choices">
- <li>1. strings</li>
- <li>2. booleans</li>
- <li>3. alerts</li>
- <li>4. numbers</li>
+ <li>1. JavaScript</li>
+ <li>2. terminal/bash</li>
+ <li>3. for loops</li>
+ <li id="correct5">4. console.log</li>
 </ul>
 </div>
 
 <!-- question 6 -->
 <div id="question-container">
-<h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
+<h2 id="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
 <ul id="choices">
- <li>1. strings</li>
- <li>2. booleans</li>
- <li>3. alerts</li>
- <li>4. numbers</li>
+ <li>1. var myVariable</li>
+ <li>2. let myVariable</li>
+ <li>3. const myVariable</li>
+ <li id="correct6">4. All of the above</li>
 </ul>
 </div>
 
