--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <!-- Quiz Section -->
 <div id="question-container">
   <!-- question 1 -->
-  <h2 id="question-text"> Commonly Used data types DO NOT include: </h2>
-  <ul id="choices">
+  <h2 class="question-text"> Commonly Used data types DO NOT include: </h2> 
+  <ul class="choices">
    <li>1. strings</li>
    <li>2. booleans</li>
    <li id="correct1">3. alerts</li>
@@ -37,8 +37,8 @@
 
 <!-- question 2 -->
 <div id="question-container">
-<h2 id="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
-<ul id="choices">
+<h2 class="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
+<ul class="choices">
  <li>1. quotes</li>
  <li>2. curly brackets</li>
  <li id="correct2">3. parenthesis</li>
@@ -48,8 +48,8 @@
 
 <!-- question 3 -->
 <div id="question-container">
-<h2 id="question-text"> Arrays in JavaScript can be used to store __________. </h2>
-<ul id="choices">
+<h2 class="question-text"> Arrays in JavaScript can be used to store __________. </h2>
+<ul class="choices">
  <li>1. numbers and strings</li>
  <li>2. other arrays</li>
  <li>3. booleans</li>
@@ -59,8 +59,8 @@
 
 <!-- question 4 -->
 <div id="question-container">
-<h2 id="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
-<ul id="choices">
+<h2 class="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
+<ul class="choices">
  <li>1. commas</li>
  <li>2. curly brackets</li>
  <li id="correct4">3. quotes</li>
@@ -70,8 +70,8 @@
 
 <!-- question 5 -->
 <div id="question-container">
-<h2 id="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
-<ul id="choices">
+<h2 class="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
+<ul class="choices">
  <li>1. JavaScript</li>
  <li>2. terminal/bash</li>
  <li>3. for loops</li>
@@ -81,8 +81,8 @@
 
 <!-- question 6 -->
 <div id="question-container">
-<h2 id="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
-<ul id="choices">
+<h2 class="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
+<ul class="choices">
  <li>1. var myVariable</li>
  <li>2. let myVariable</li>
  <li>3. const myVariable</li>
@@ -90,7 +90,20 @@
 </ul>
 </div>
 
+<!-- form section -->
+<div id="result-container">
+  <h3>Quiz Results</h3>
+  <p>Your Score: <span id="score">0</span></p>
+  <p>High Score: <span id="high-score">0</span></p>
+  <form id="initials-form">
+    <label for="initials">Enter your initials:</label>
+    <input type="text" id="initials" maxlength="3" required>
+    <button type="submit">Save Score</button>
+  </form>
+</div>
 
+
+<!-- javascript link -->
 <script src="./script.js"></script>
 </body>
 
