--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
@@ -7,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript Quiz</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
-
+  <script src="./script.js"></script>
 </head>
 
 <body>
@@ -25,99 +24,96 @@
   </div>
 
   <!-- Quiz Section -->
-<div class="question-container">
-  <!-- question 1 -->
-  <div class="question-box">
-  <h2 class="question-text"> Commonly Used data types DO NOT include: </h2> 
-  <ul class="choices">
-   <li>1. strings</li>
-   <li>2. booleans</li>
-   <li id="correct1">3. alerts</li>
-   <li>4. numbers</li>
-  </ul>
-</div>
-</div>
-
-<!-- question 2 -->
-<div class="question-container">
-  <div class="question-box">
-<h2 class="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
-<ul class="choices">
- <li>1. quotes</li>
- <li>2. curly brackets</li>
- <li id="correct2">3. parenthesis</li>
- <li>4. square brackets</li>
-</ul>
-</div>
-</div>
-
-<!-- question 3 -->
-<div class="question-container">
-  <div class="question-box">
-<h2 class="question-text"> Arrays in JavaScript can be used to store __________. </h2>
-<ul class="choices">
- <li>1. numbers and strings</li>
- <li>2. other arrays</li>
- <li>3. booleans</li>
- <li id="correct3">4. all the above</li>
-</ul>
+  <div class="question-container">
+    <!-- question 1 -->
+    <div class="question-box">
+      <h2 class="question-text"> Commonly Used data types DO NOT include: </h2>
+      <div class="choices">
+        <button>1. strings</button>
+        <button>2. booleans</button>
+        <button id="correct1">3. alerts</button>
+        <button>4. numbers</button>
+      </div>
+    </div>
   </div>
-</div>
 
-<!-- question 4 -->
-<div class="question-container">
-  <div class="question-box">
-<h2 class="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
-<ul class="choices">
- <li>1. commas</li>
- <li>2. curly brackets</li>
- <li id="correct4">3. quotes</li>
- <li>4. parenthesis</li>
-</ul>
+  <!-- question 2 -->
+  <div class="question-container">
+    <div class="question-box">
+      <h2 class="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
+      <div class="choices">
+        <button>1. quotes</button>
+        <button>2. curly brackets</button>
+        <button id="correct2">3. parenthesis</button>
+        <button>4. square brackets</button>
+      </div>
+    </div>
   </div>
-</div>
 
-<!-- question 5 -->
-<div class="question-container">
-  <div class="question-box">
-<h2 class="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
-<ul class="choices">
- <li>1. JavaScript</li>
- <li>2. terminal/bash</li>
- <li>3. for loops</li>
- <li id="correct5">4. console.log</li>
-</ul>
-</div>
-</div>
-
-<!-- question 6 -->
-<div class="question-container">
-  <div class="question-box">
-<h2 class="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
-<ul class="choices">
- <li>1. var myVariable</li>
- <li>2. let myVariable</li>
- <li>3. const myVariable</li>
- <li id="correct6">4. All of the above</li>
-</ul>
+  <!-- question 3 -->
+  <div class="question-container">
+    <div class="question-box">
+      <h2 class="question-text"> Arrays in JavaScript can be used to store __________. </h2>
+      <div class="choices">
+        <button>1. numbers and strings</button>
+        <button>2. other arrays</button>
+        <button>3. booleans</button>
+        <button id="correct3">4. all the above</button>
+      </div>
+    </div>
   </div>
-</div>
 
-<!-- form section -->
-<div class="result-container">
-  <h3>Quiz Results</h3>
-  <p>Your Score: <span id="score">0</span></p>
-  <p>High Score: <span id="high-score">0</span></p>
-  <form id="initials-form">
-    <label for="initials">Enter your initials:</label>
-    <input type="text" id="initials" maxlength="3" required>
-    <button type="submit">Save Score</button>
-  </form>
-</div>
+  <!-- question 4 -->
+  <div class="question-container">
+    <div class="question-box">
+      <h2 class="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
+      <div class="choices">
+        <button>1. commas</button>
+        <button>2. curly brackets</button>
+        <button id="correct4">3. quotes</button>
+        <button>4. parenthesis</button>
+      </div>
+    </div>
+  </div>
 
+  <!-- question 5 -->
+  <div class="question-container">
+    <div class="question-box">
+      <h2 class="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
+      <div class="choices">
+        <button>1. JavaScript</button>
+        <button>2. terminal/bash</button>
+        <button>3. for loops</button>
+        <button id="correct5">4. console.log</button>
+      </div>
+    </div>
+  </div>
 
-<!-- javascript link -->
-<script src="./script.js"></script>
+  <!-- question 6 -->
+  <div class="question-container">
+    <div class="question-box">
+      <h2 class="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
+      <div class="choices">
+        <button>1. var myVariable</button>
+        <button>2. let myVariable</button>
+        <button>3. const myVariable</button>
+        <button id="correct6">4. All of the above</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- form section -->
+  <div class="result-container">
+    <h3>Quiz Results</h3>
+    <p>Your Score: <span id="score">0</span></p>
+    <p>High Score: <span id="high-score">0</span></p>
+    <form id="initials-form">
+      <label for="initials">Enter your initials:</label>
+      <input type="text" id="initials" maxlength="3" required>
+      <button type="submit">Save Score</button>
+    </form>
+  </div>
+
 </body>
 
 </html>
