added questions into javascript and just an empty div in the html to display the questions, working on making questions appear once start quiz is clicked

--- a/index.html
+++ b/index.html
@@ -17,90 +17,22 @@
   </div>
 
   <!-- Start Quiz Section -->
-  <div>
+  <div class="start-container">
     <h1 class="question">Coding Quiz Challenge</h1>
     <p class="coding-quiz-text">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</p>
     <button id="start-btn">Start Quiz</button>
   </div>
 
   <!-- Quiz Section -->
-  <div class="question-container">
-    <!-- question 1 -->
-    <div class="question-box">
-      <h2 class="question-text"> Commonly Used data types DO NOT include: </h2>
-      <div class="choices">
-        <button>1. strings</button>
-        <button>2. booleans</button>
-        <button id="correct1">3. alerts</button>
-        <button>4. numbers</button>
-      </div>
+ <!-- Only one empty question container -->
+<div class="question-container">
+  <div class="question-box">
+    <h2 class="question-text"></h2>
+    <div class="choices">
+      <!-- Buttons for answer choices -->
     </div>
   </div>
-
-  <!-- question 2 -->
-  <div class="question-container">
-    <div class="question-box">
-      <h2 class="question-text"> The condition in an if / else statement is enclosed with __________. </h2>
-      <div class="choices">
-        <button>1. quotes</button>
-        <button>2. curly brackets</button>
-        <button id="correct2">3. parenthesis</button>
-        <button>4. square brackets</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- question 3 -->
-  <div class="question-container">
-    <div class="question-box">
-      <h2 class="question-text"> Arrays in JavaScript can be used to store __________. </h2>
-      <div class="choices">
-        <button>1. numbers and strings</button>
-        <button>2. other arrays</button>
-        <button>3. booleans</button>
-        <button id="correct3">4. all the above</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- question 4 -->
-  <div class="question-container">
-    <div class="question-box">
-      <h2 class="question-text"> String values must be enclosed within __________ when being assigned to variables. </h2>
-      <div class="choices">
-        <button>1. commas</button>
-        <button>2. curly brackets</button>
-        <button id="correct4">3. quotes</button>
-        <button>4. parenthesis</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- question 5 -->
-  <div class="question-container">
-    <div class="question-box">
-      <h2 class="question-text"> A very useful tool used during development and debugging for printing content to the debugger is: </h2>
-      <div class="choices">
-        <button>1. JavaScript</button>
-        <button>2. terminal/bash</button>
-        <button>3. for loops</button>
-        <button id="correct5">4. console.log</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- question 6 -->
-  <div class="question-container">
-    <div class="question-box">
-      <h2 class="question-text"> What is the correct way to declare a variable in JavaScript? </h2>
-      <div class="choices">
-        <button>1. var myVariable</button>
-        <button>2. let myVariable</button>
-        <button>3. const myVariable</button>
-        <button id="correct6">4. All of the above</button>
-      </div>
-    </div>
-  </div>
+</div>
 
   <!-- form section -->
   <div class="result-container">
