turned view high scores into a button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- heading info -->
   <div class="time-scores">
-    <p id="high-scores">View High Scores</p>
+    <button id="high-scores">View High Scores</button>
     <p>Time: <span id="timer">75</span>s </p>
   </div>
 
