adding id to store high scores and image to readme

--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@
     </form>
   </div>
 
+  <!-- High Scores Display Here -->
+<div id="high-scores-display">
 
+</div>
  
+
+
 </body>
 
 </html>
